--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Basic Style */
-body {
+.page {
   background-color: #f8f8f8;
   color: #333;
   font-family: lato, sans-serif;
@@ -9,11 +9,12 @@ body {
   margin: 0 auto;
   display: block;
   text-align: right;
+  font-family: fantasy, cursive;
 }
 .header img {
   width: 100%;
 }
-.header .header-info {
+.header-info {
   font-family: fantasy, cursive;
 }
 
@@ -27,50 +28,20 @@ body {
   width: 500px;
   margin: 0 auto 0;
 }
-.task {
-  width: 56%;
-  display: inline-block;
-  flex-grow: 1;
-}
-.task-wrapper {
-  display: flex;
-}
-ul {
-  margin: 0;
-  padding: 0px;
-}
-li,
-h3 {
-  list-style: none;
-}
-input,
-button {
-  outline: none;
-}
-button {
-  background: none;
-  border: 0px;
-  color: #888;
-  font-size: 15px;
-  width: 60px;
-  font-family: lato, sans-serif;
-  cursor: pointer;
-}
-button:hover {
-  color: #3a3a3a;
-}
-/* Heading */
-h3,
-label[for="new-task"] {
+
+.add-label {
+  display: block;
+  margin: 0 0 20px;
   color: #333;
   font-weight: 700;
   font-size: 15px;
   border-bottom: 2px solid #333;
   padding: 30px 0 10px;
-  margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+
+.add-input {
+  width: 318px;
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -81,71 +52,116 @@ input[type="text"] {
   border-radius: 6px;
   font-family: lato, sans-serif;
   color: #888;
+  outline: none;
 }
-input[type="text"]:focus {
+.task {
+  width: 56%;
+  display: inline-block;
+  flex-grow: 1
+}
+.task-wrapper {
+  display: flex;
+}
+
+.title {
   color: #333;
+  font-weight: 700;
+  font-size: 15px;
+  border-bottom: 2px solid #333;
+  padding: 30px 0 10px;
+  margin: 0;
+  text-transform: uppercase;
+  list-style:none;
 }
 
-/* New Task */
-label[for="new-task"] {
-  display: block;
-  margin: 0 0 20px;
+.list {
+  margin:0;
+  padding: 0px;
 }
-input#new-task {
-  width: 318px;
-}
-
-/* Task list */
-li {
+.list-item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
+  list-style:none;
 }
-li > * {
-  vertical-align: middle;
-}
-
-li > input[type="checkbox"] {
+.checkbox {
   margin: 0 10px;
+  vertical-align: middle;
+  outline: none;
 }
-li > label {
+.label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
+  vertical-align: middle;
 }
-li > input[type="text"] {
+
+.input {
   width: 226px;
+  margin: 0;
+  font-size: 18px;
+  line-height: 18px;
+  height: 21px;
+  padding: 0 9px;
+  border: 1px solid #ddd;
+  background: #fff;
+  border-radius: 6px;
+  font-family: lato, sans-serif;
+  color: #888;
+  vertical-align: middle;
+  outline:none;
 }
-button.delete img {
+
+.button {
+  background: none;
+  border: 0px;
+  color: #888;
+  font-size: 15px;
+  width: 60px;
+  font-family: lato, sans-serif;
+  cursor: pointer;
+  outline:none;
+}
+.button:hover {
+  color: #3a3a3a;
+}
+.delete {
+  background: none;
+  border: 0px;
+  color: #888;
+  font-size: 15px;
+  width: 60px;
+  font-family: lato, sans-serif;
+  cursor: pointer;
+  outline: none;
+}
+.delete img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.delete img:hover {
   transform: rotateZ(0);
 }
 
-/* Completed */
-ul#completed-tasks label {
+.completed-label, .list#completed-tasks .label {
   text-decoration: line-through;
   color: #888;
 }
 
-/* Edit Task */
-ul li input[type="text"] {
-  display: none;
+.list .list-item .input {
+  display:none
 }
 
-ul li.edit input[type="text"] {
-  display: inline-block;
-  width: 224px;
+.list .list-item.edit .input {
+  display:inline-block;
+  width:224px
 }
 
-ul li.edit label {
-  display: none;
+.list .list-item.edit .label {
+  display:none;
 }
