--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@
 .task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 
 .task-wrapper {
@@ -169,12 +169,12 @@
 }
 
 .list .list-item .input {
-  display: none
+  display: none;
 }
 
 .list .list-item.edit .input {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .list .list-item.edit .label {
